@@ -3,6 +3,11 @@ package model;
 import java.util.List;
 
 public class RuleSet {
+    package model;
+
+import java.util.List;
+
+public class RuleSet {
     public boolean checkMove(Position currPos, Position nextPos, TossResult tossResult) {
         // 백도
         if (tossResult == TossResult.BACKDO) {
@@ -11,25 +16,42 @@ public class RuleSet {
 
         // 도개걸윷모
         else {
-            List<Position> nextPositions = currPos.getNextPositions(); // for sqaure boards
-            if (currPos.isCenter() && currPos.getId()/7 != 4) {     // for non-square boards
+            List<Position> nextPositions = currPos.getNextPositions(); // for square boards
+            if (currPos.isCenter() && currPos.getId()/7 != 4) {        // for non-square boards
                 nextPositions = currPos.getNextPositions().subList(0, 1);
             }
 
             for (Position p : nextPositions) {
+                Position q = p;
                 for (int i = 1; i < tossResult.getValue(); i++) {
-                    p = p.getNextPositions().get(0);
-                    if (p.isGoal()) {
+                    q = q.getNextPositions().getFirst();
+                    if (q.isGoal()) {
                         return true;
                     }
                 }
-                if (p.getId() == nextPos.getId()) {
+                if (q.getId() == nextPos.getId()) {
                     return true;
                 }
             }
         }
         return false;
     }
+
+    public boolean canStack(Token tokenA, Token tokenB) {
+        if (tokenA.getStackedTokens().contains(tokenB)) {
+            return false;
+        }
+        return tokenA.getId() != tokenB.getId() && tokenA.getOwner() == tokenB.getOwner() && tokenA.getPosition() == tokenB.getPosition();
+    }
+
+    public boolean canCapture(Token tokenA, Token tokenB) {
+        boolean result = tokenA.getOwner() != tokenB.getOwner() && tokenA.getPosition() == tokenB.getPosition();
+        if (result) {
+            tokenA.getOwner().addTurn(1);
+        }
+        return result;
+    }
+}
 
     public boolean canStack(Token tokenA, Token tokenB) {
         if (tokenA.getStackedTokens().contains(tokenB)) {
